Card position small fixes

--- a/src/components/Global/Button/index.scss
+++ b/src/components/Global/Button/index.scss
@@ -49,4 +49,9 @@
     background: rgba(255, 255, 255, 0.35);
     border-radius: 10px;
   }
+
+  &.white {
+    background: var(--egp-white);
+    color: var(--egp-green);
+  }
 }
